# Backtester

./: .gitignore  CMakeLists.txt  README.md
include/: backtester.h  interval.h  option.h  pbar.h  readcsv.h  table.h  table2.h  threadpool.h  trackernode.h  yfapi.h  yfapimodel.h
include/tqdm/: getopt.h  tqdm.h  unistd.h
src/: backtester.cpp  bindings.cpp  pbar.cpp  table.cpp  yfapi.cpp
src/Data/: README.md
